[flake8]
[metadata]
name = iwslcxspecapp
description = Web app to display SAR Sentinel-1 IW SLC L1B cross spectrum
url = https://github.com/agrouaze/iwslcxspecapp
author = Antoine Grouazel
author_email = antoine.grouazel@ifremer.com
license = MIT
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  E731 # do not assign a lambda expression, use a def
  W503 # line break before binary operator
exclude =
  .eggs

[options]
packages = find:
package_dir =
    =iwslcxspecapp
install_requires =
    docutils
    xarray
    scipy
    numpy
    xarray-datatree
    panel
    pandas
    holoviews
    hvplot
    cartopy
    geoviews
    netCDF4
    xsar
[options.packages.find]
where = iwslcxspecapp

#include = pkg*